WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
273665
WebCore::XMLDocumentParserScope does not restore xmlStructuredErrorContext properly
https://bugs.webkit.org/show_bug.cgi?id=273665
Summary
WebCore::XMLDocumentParserScope does not restore xmlStructuredErrorContext pr...
David Kilzer (:ddkilzer)
Reported
2024-05-02 18:46:08 PDT
WebCore::XMLDocumentParserScope does not restore xmlStructuredErrorContext properly when it goes out of scope. Currently it does not store the original value of xmlStructuredErrorContext, and it uses the value of xmlGenericErrorContext to "restore" xmlStructuredErrorContext.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-02 18:46:23 PDT
<
rdar://problem/127468626
>
David Kilzer (:ddkilzer)
Comment 2
2024-05-02 18:57:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28078
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug