Source/WebCore/xml/parser/XMLDocumentParserScope.h
@@ -47,7 +47,7 @@ public:
     static WeakPtr<CachedResourceLoader>& currentCachedResourceLoader();
 
 #if ENABLE(XSLT)
-    XMLDocumentParserScope(CachedResourceLoader*, xmlGenericErrorFunc, xmlStructuredErrorFunc = nullptr, void* errorContext = nullptr);
+    XMLDocumentParserScope(CachedResourceLoader*, xmlGenericErrorFunc, xmlStructuredErrorFunc = nullptr, void* genericErrorContext = nullptr, void* structuredErrorContext = nullptr);
 #endif
 
 private:
@@ -57,7 +57,8 @@ private:
 #if ENABLE(XSLT)
     xmlGenericErrorFunc m_oldGenericErrorFunc { nullptr };
     xmlStructuredErrorFunc m_oldStructuredErrorFunc { nullptr };
-    void* m_oldErrorContext { nullptr };
+    void* m_oldGenericErrorContext { nullptr };
+    void* m_oldStructuredErrorContext { nullptr };
 #endif
 };
 
